--- a/banking.html
+++ b/banking.html
@@ -57,7 +57,7 @@
             </div>
         </section>
     </main>
-    <script src="js/custom.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
